# realtime-audio-chat

./: .env.example  README.md  app.py  constraints-app.txt  f5_adapter.py  f5_tts_gradio_ui.py  fish_speech_adapter.py  pyproject.toml  realtime_audio_chat.py  realtime_audio_chat_combined.py  requirements-fish-speech-deps.txt  requirements-fish-speech.txt  requirements.txt  whisper_stt_adapter.py  whisper_stt_gradio_ui.py
numpy/: __init__.py
scripts/: run-app.ps1  run-stt.ps1  setup-app.ps1  setup-stt.ps1  setup_unix.sh  setup_windows.ps1  smoke-test.ps1
src/: __init__.py  app.py  chat_history.py  config.py  llm_client.py  local_clients.py  persona.py  stt_client.py  stt_wrapper.py
src/resources/voices/: README.md  ljspeech-LJ001-0001.txt  voices.yaml
src/servers/: f5.py  whisper.py
src/tts/: f5_wrapper.py
src/ui/: side_panel.py
stt_service/: README.md  __init__.py  main.py  requirements-stt.txt  service_config.py
tests/: test_app_history.py  test_config.py  test_f5_server.py  test_f5_wrapper.py  test_llm_client.py  test_local_clients.py  test_persona.py  test_whisper_server.py
