[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-audio-chat"
version = "0.2.0"
description = "Realtime voice chat with local Whisper STT and F5-TTS streaming"
readme = "README.md"
authors = [
    { name = "Realtime Audio Team" }
]
requires-python = ">=3.10"
dependencies = [
    "fastrtc==0.1.11",
    "gradio==4.44.1",
    "groq==0.7.0",
    "numpy==1.26.4",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = ["pytest==8.2.1"]

[tool.setuptools.packages.find]
where = ["src"]
