[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-audio-chat"
version = "0.2.0"
description = "Realtime voice chat with local Whisper STT and F5-TTS streaming"
readme = "README.md"
authors = [
    { name = "Realtime Audio Team" }
]
requires-python = ">=3.10"
dependencies = [
    "fastrtc==0.0.33",
    "gradio==4.44.1",
    "numpy==1.26.4",
    "faster-whisper==1.0.3",
    "openai==1.35.10",
    "python-dotenv==1.0.1",
    "fastapi==0.115.6",
    "pydantic==2.10.6",
    "uvicorn==0.31.1",
    "PyYAML==6.0.2",
    "imageio-ffmpeg==0.5.1",
]

[project.optional-dependencies]
dev = ["pytest==8.2.1"]
stt_server = ["faster-whisper==1.0.3"]
tts_server = ["F5-TTS==1.1.9", "soundfile==0.13.1"]

[tool.setuptools.packages.find]
where = ["src"]
